[package]
name = "xavax-avalanche"
description = "Rust implmenetation of the Avalanche transaction format, including a parser to parse data from and into native structs."
authors = ["Diinki Gati, <https://kayowo.net> | <https://xavax.io>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/diinki/xavax-avalanche"
license = "Apache-2.0"
keywords = ["avalanche", "crypto", "cryptocurrency", "avax"]
categories = ["cryptography::cryptocurrencies", "encoding", "parser-implementations"]
readme = "README.md"
homepage = "https://xavax.io"
publish = true

[badges]
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0.130", features = ["derive", "serde_derive"]}
serde_json = {version = "1.0.68"}
tracing = "0.1.29"
hex-literal = "0.3.3"
bech32 = "0.8.1"
bs58 = "0.4.0"
sha2 = "0.10.1"
hex = "0.4.3"
lexical-sort = "0.3.1"

tokio = {version = "1.15.0", features = ["rt", "macros"], optional = true}
reqwest = { version = "0.11.8",default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "brotli"], optional = true}


libsecp256k1 = { version = "0.7.0", optional = true }
tiny-hderive = { version = "0.3.0", optional = true }
tiny-bip39 = { version = "0.8.2", optional = true }
arrayref = { version = "0.3.6", optional = true }

sha3 = { version = "0.10.0", optional = true }
ripemd = { version = "0.1.0", optional = true }
blake3 = { version = "1.1.0", optional = true }


# Optional part of the API includes the avalanche post request API
[features]
request-api = [
    "tokio",
    "reqwest"
]
# Optional part of the API, includes the cryptography necessary for Avalanche VMs
crypto-api = [
    "libsecp256k1",
    "tiny-hderive",
    "tiny-bip39",
    "arrayref",
    "sha3",
    "ripemd",
    "blake3"
]